--- a/estilos/style.css
+++ b/estilos/style.css
@@ -27,8 +27,8 @@ body, html {
     align-items: center;
     background-color: black;
     color: white;
-    height: 600px;
-    width: 300px;
+    height: 90vh;
+    width: 90vw;
     border: 1px solid white;
     border-radius: 10px;
     overflow: hidden;
