--- a/estilos/style.css
+++ b/estilos/style.css
@@ -27,12 +27,14 @@ body, html {
     align-items: center;
     background-color: black;
     color: white;
-    height: 90vh;
-    width: 90vw;
+    height: 90%;
+    width: 90%;
     border: 1px solid white;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.842);
+    transition: width .5s, height .5s;
+    transition-timing-function: ease;
     
 }
 
