--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -11,6 +11,9 @@ Desktop: 992px até 1200px
 Grandes telas: acima de 1200px */
 
 
+
+
+
 @media screen and (min-width: 768px) and (max-width: 992px) {
 
     
@@ -48,7 +51,13 @@ Grandes telas: acima de 1200px */
     main.container {
         width: 80%;
         height: 60%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
     }
+
+    
 
     .imagem {
         display: flex;
@@ -58,7 +67,7 @@ Grandes telas: acima de 1200px */
         justify-content: left;
         align-items: left;   
         float: left;   
-        width: 50%;
+        width: 40vw;
         height: 100vh;
         
     }
@@ -68,8 +77,14 @@ Grandes telas: acima de 1200px */
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-top: 100px;
+        margin-top: 300px;
+        margin-left: 150px;
+        
 
        }
+
+    .formitens {
+        width: 500px;
+    }
 
     }
