--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -11,7 +11,32 @@ Desktop: 992px até 1200px
 Grandes telas: acima de 1200px */
 
 
+@media screen and (min-width: 320px) {
 
+
+
+    
+    .textos > h1 {
+       
+        font-size: 1em;
+        padding: 10px;
+
+    }
+
+    .textos > p {
+        font-size: 12px;
+        padding-bottom: 10px;
+    }
+
+    .box {
+        display: flex;
+        flex-direction: column;
+        
+    }
+
+
+
+}
 
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
